feat: Add open in terminal option, change default start script name back to `start.bat`
Closes #1, closes #2